# libpam-ecafe

./: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  configure.scan
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
debian/: changelog  control  copyright  rules
m4/: ChangeLog
po/: ChangeLog  Makevars  POTFILES.in  fr.po  libpam-ecafe.pot
src/: Makefile.am  Makefile.in  pam_ecafe.c
src/.deps/: pam_ecafe_la-pam_ecafe.Plo
src/.libs/: pam_ecafe.la  pam_ecafe.lai
