# Copyright (C) 2009 Guillaume Viguier-Just
#
# Author: Guillaume Viguier-Just <guillaume@wedus.org>
#
# This file is part of pam_ecafe.
#
# pam_ecafe is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# pam_ecafe is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with pam_ecafe.  If not, see <http://www.gnu.org/licenses/>.

EXTRA_DIST= config.rpath m4/ChangeLog README COPYING 
ACLOCAL_AMFLAGS=-I m4
SUBDIRS= po src
